# vmd-rs

./: Cargo.toml  LICENSE.md  README.md
src/: errors.rs  lib.rs  vmd.rs
src/utils/: array.rs
tests/: vmd.rs
tests/sample/: input.npy  omega.npy  uhat.npy  ulong.npy
