[package]
name = "vmd-rs"
version = "0.1.1"
edition = "2021"
authors = [
    "\"jiafuei\""
]
license = "MIT"
readme = "README.md"

repository = "https://github.com/jiafuei/vmd-rs"
description = "Variational mode decomoposition in Rust"
keywords = ["fft", "fourier", "signal", "processing"]

[lib]
name = "vmd_rs"
bench = false
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", default-features = false }
ndarray-rand =  "0.14.0" 
ndarray-slice = { version = "0.2.3", default-features = false}
num-complex = { version = "0.4.3", default-features = false }
rustfft = "6.1.0"
thiserror = "1.0.44"

[dev-dependencies]
approx = "0.5.1"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
ndarray-npy = "0.8.1"

[features]
default = ["std"]
blas = ["ndarray/blas"] 
serde = ["ndarray/serde"]
std = ["ndarray/std", "ndarray-slice/std", "num-complex/std"]

